deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mserv-compta-zik
  labels:
    app: compta-zik-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: compta-zik-app
  template:
    metadata:
      labels:
        app: compta-zik-app
    spec:
      containers:
        - name: mserv-compta-zik
          image: mserv-compta-zik:1.0
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
          volumeMounts:
            - name: documents
              mountPath: /documents
          startupProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 18
          readinessProbe:
            tcpSocket:
              port: 8081
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 3
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "500m"
      volumes:
        - name: documents
          persistentVolumeClaim:
            claimName: mserv-compta-zik-documents
---
kind: Service
apiVersion: v1
metadata:
  name: mserv-compta-zik-svc
  labels:
    app: compta-zik-app
spec:
  ports:
    - name: http-8081
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: compta-zik-app
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: mserv-compta-zik
  labels:
    app: compta-zik-app
spec:
  to:
    kind: Service
    name: mserv-compta-zik-svc
  port:
    targetPort: http-8081
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
